<resources>
    <string name="app_name">Cloud Enabler</string>
    <string name="app_name_fullkey">HMI VPN</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <string name="errors">Errors</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="loading">Processing...</string>
    <string name="ok">OK</string>
    <string name="inet_failed">Failed Connection</string>
    <string name="inet_failed_msg">Unable to connect to the Cloud! Please check your network settings.</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="login_user">User</string>
    <string name="new_device">New Device</string>
    <string name="new_group">New Group</string>
    <string name="account_manage">Account Manage</string>
    <string name="account_activate">Account activation</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="original_password">Original Password</string>
    <string name="company">Company</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="logout_message">Sign out?</string>
    <string name="setval">Set Value</string>
    <string name="been_signout">This account has been signed out</string>
    <string name="err_group_list">Oops! Exception occurred. Please try it again later!</string>
    <string name="err_device_list">Oops! Exception occurred. Please try it again later!</string>
    <string name="err_update_val">Oops! Failed to update value. Please try it again later!</string>
    <string name="err_auth_sign_in">Sign-in failed (Authentication failure)</string>
    <string name="err_auth_sign_up">Sign-up failed (Authentication failure)</string>
    <string name="success_sign_in">Sing-in successfully</string>
    <string name="success_sign_up">Sing-up successfully</string>
    <string name="err_get_ioval">Oops! Exception occurred. Please try it again later!</string>
    <string name="err_user_sign_in">Sign in failed! (Authentication failure)</string>
    <string name="err_sign_up">Sign up failed!</string>
    <string name="err_get_data">Oops! Exception occurred. Please try it again later!</string>
    <string name="register">Register</string>
    <string name="view">View</string>
    <string name="update_app_msg">New version is now avaliable! Please click confirm to update APP!</string>
    <string name="updateding">Updating...</string>
    <string name="ignore">Ignore</string>
    <string name="new_account">New Account</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="name">Name</string>
    <string name="admin">Admin</string>
    <string name="activate">Activate</string>
    <string name="success_create">Successfully created!</string>
    <string name="success_activate">Successfully Activate!</string>
    <string name="err_remove">Failed to remove!</string>
    <string name="success_remove">Successfully remove!</string>
    <string name="make_sure">Are you sure to do this action?</string>
    <string name="make_sure_press_sw">Are you sure to press the switch?</string>
    <string name="make_sure_press_btn">Are you sure to press the button?</string>
    <string name="make_sure_swmac_dev1">Device1 MAC： </string>
    <string name="make_sure_swmac_dev2">Device2 MAC： </string>
    <string name="make_sure_swmac">If you\'re sure to do this action, please enter Device1\'s MAC to continue the process.</string>
    <string name="make_sure_swback">Are your sure to restore the exchanged device?</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_device">Edit Device</string>
    <string name="err_get_account">Failed to get account information</string>
    <string name="success_save">Successfully saved</string>
    <string name="new_company">Sign Up</string>
    <string name="account_hint">Account (e.g. admin@mail.com)</string>
    <string name="admin_password">Admin password</string>
    <string name="signup_company">Sign up a company</string>
    <string name="device_sn">Serial number/MAC address</string>
    <string name="device_name">Device name</string>
    <string name="device_name_hint">Device name(e.g. PLC 1)</string>
    <string name="device_polling">Polling time</string>
    <string name="search">Search</string>
    <string name="local_dev_settings">Local Settings</string>
    <string name="make_sure_reboot">Rebooting the device to apply some settings. Do you want to do this? (Around 70-80 sec.)</string>
    <string name="device_fix_point">Floating points</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="description_dev">Description (e.g. Device 1)</string>
    <string name="description_reg">Description (e.g. LED 1)</string>
    <string name="local_connect">Local connect</string>
    <string name="ip_addr">Device IP Address</string>
  	<string name="permission_alarm">Alarm</string>
  	<string name="agent_num">Agent Number</string>
    <string name="input_text">Text</string>
    <string name="err_save">Failed to save!</string>
    <string name="new_password">New password</string>
    <string name="permission_monitor">Monitor</string>
    <string name="permission_control">Control</string>
    <string name="select_all">Select All</string>
    <string name="cloud_device">Cloud</string>
    <string name="local_device">Local</string>
    <string name="cancel_all">Cancel All</string>
    <string name="apply_permission">Apply Permission</string>
    <string name="apply_permission_msg">Apply permission settings from other accounts.</string>
    <string name="pref_enable_ntp_service">Enable NTP Service</string>
    <string name="pref_time_settings">Time Settings</string>
    <string name="pref_ntp_server1">NTP Server 1</string>
    <string name="pref_ntp_server2">NTP Server 2</string>
    <string name="pref_tzone">Time Zone</string>
    <string name="pref_com0_settings">COM-0 Settings</string>
    <string name="pref_com1_settings">COM-1 Settings</string>
    <string name="pref_modbus_opmode">Operating Mode</string>
    <string name="pref_modbus_uid">Unit ID</string>
    <string name="pref_modbus_iface">Interface</string>
    <string name="pref_modbus_brate">Baud Rate</string>
    <string name="pref_modbus_datalen">Data Length</string>
    <string name="pref_modbus_parity">Parity</string>
    <string name="pref_modbus_stop_bit">Stop Bit</string>
    <string name="pref_enable_https">Enable HTTPS</string>
    <string name="logout">Logout</string>
    <string name="group">Group</string>
    <string name="new_group_name">New group name</string>
    <string name="new_group_member">New group member</string>
    <string name="device">Device</string>
    <string name="save_and_next"><![CDATA[Save and Create Next]]></string>
    <string name="group_name">Group name</string>
    <string name="invalid_val">Input data contains invalid string</string>
    <string name="add">Add</string>
    <string name="new_register">New register</string>
    <string name="register_type">Register type</string>
    <string name="register_addr">Register address</string>
    <string name="type">Type</string>
    <string name="logging">Logging</string>
    <string name="en_reg_logging">Logging this register</string>
    <string name="en_reg_usb_logging">Logging this register (USB)</string>
    <string name="reg_address">Address  (High byte - Low byte)</string>
    <string name="registered">The address has been registered!</string>
    <string name="enable_usb_loggoing">Enable USB logging</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="device_model">Device model</string>
    <string name="err_same_addr">The high and low register can not be the same.!</string>
    <string name="err_sign_up_duplicate">Sign up failed! (Duplicate name exists)</string>
    <string name="register_cloud_device">Add to Cloud</string>
    <string name="change_password">Change password</string>
    <string name="device_kt_63511">KT-63511  - 128 Registers</string>
    <string name="device_kt_63511w">KT-63511W - 128 Registers, WiFi</string>
    <string name="device_kt_63512">KT-63512  - 256 Registers</string>
    <string name="device_kt_63512w">KT-63512W - 256 Registers, WiFi</string>
    <string name="device_kt_63513">KT-63513  - 128 Registers</string>
    <string name="device_kt_63513w">KT-63513W - 128 Registers, WiFi</string>
    <string name="device_kt_63514">KT-63514  - 256 Registers</string>
    <string name="device_kt_63514w">KT-63514W - 256 Registers, WiFi</string>
    <string name="device_kt_63515">KT-63515  - 9 Slaves, 128 Registers</string>
    <string name="device_kt_63515w">KT-63515W - 9 Slaves, 128 Registers, WiFi</string>
    <string name="device_kt_63516">KT-63516  - 9 Slaves, 256 Registers</string>
    <string name="device_kt_63516w">KT-63516W - 9 Slaves, 256 Registers, WiFi</string>
    <string name="device_hy_63511">HY-63511  - 128 Registers</string>
    <string name="device_hy_63511w">HY-63511W - 128 Registers, WiFi</string>
    <string name="device_hy_63512">HY-63512  - 256 Registers</string>
    <string name="device_hy_63512w">HY-63512W - 256 Registers, WiFi</string>
    <string name="device_hy_63515">HY-63515  - 9 Slaves, 128 Registers</string>
    <string name="device_hy_63515w">HY-63515W - 9 Slaves, 128 Registers, WiFi</string>
    <string name="device_hy_63516">HY-63516  - 9 Slaves, 256 Registers</string>
    <string name="device_hy_63516w">HY-63516W - 9 Slaves, 256 Registers, WiFi</string>
    <string name="device_yt_63511">YT-63511  - 128 Registers</string>
    <string name="device_yt_63511w">YT-63511W - 128 Registers, WiFi</string>
    <string name="device_yt_63512">YT-63512  - 256 Registers</string>
    <string name="device_yt_63512w">YT-63512W - 256 Registers, WiFi</string>
    <string name="device_yt_63515">YT-63515  - 9 Slaves, 128 Registers</string>
    <string name="device_yt_63515w">YT-63515W - 9 Slaves, 128 Registers, WiFi</string>
    <string name="device_yt_63516">YT-63516  - 9 Slaves, 256 Registers</string>
    <string name="device_yt_63516w">YT-63516W - 9 Slaves, 256 Registers, WiFi</string>
    <string name="audit_log">Audit Log</string>
    <string name="cloud_status">Cloud Status</string>
    <string name="reset_password">Reset password</string>
    <string name="enable">Enable</string>
    <string name="real_time">Real time</string>
    <string name="chooseDate">Choose date</string>
    <string name="average">Average</string>
    <string name="max">Max value</string>
    <string name="min">Min value</string>
    <string name="slave_ip_hinet">Slave IP Address</string>
    <string name="slave_port_hint">Port (e.g. 502)</string>
    <string name="tcp_master_setting">TCP/IP Setting</string>
    <string name="serial_port">Serial Port</string>
    <string name="slave_id">Slave ID</string>
    <string name="edit_slave_device">Edit Slave Device</string>
    <string name="company_info">Company Info.</string>
    <string name="subsidiary">Subsidiary</string>
    <string name="announcement">Announcement</string>
    <string name="advgp">Advanced Group</string>
    <string name="iostlog">I/O status log</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="rtBarChart">Real-Time Chart</string>
    <string name="file_link">File Links</string>
    <string name="trial_login">Trial Login</string>
    <string name="announce_all_subsidiary">Announce All</string>
</resources>