<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_new_register"
        android:title="@string/add"
        app:showAsAction="always" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_editor"
        android:title="@string/edit_device"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/editSlvDev"
        android:icon="@drawable/ic_editor"
        android:title="@string/edit_slave_device"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/rtBarChart"
        android:icon="@drawable/ic_editor"
        android:title="@string/rtBarChart"
        android:visible="false"
        app:showAsAction="never" />
</menu>
