<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/new_company"
        android:icon="@drawable/ic_new_company"
        android:title="@string/new_company"
        app:showAsAction="always" />

    <item
        android:id="@+id/announce_all_subsidiary"
        android:icon="@drawable/ic_event_log"
        android:visible="false"
        android:title="@string/announce_all_subsidiary"
        app:showAsAction="never" />

</menu>
