<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#ffffff"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="9">

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="11" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:nestedScrollingEnabled="false">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textAutoComplete"
                    android:id="@+id/editDevName"
                    android:hint="@string/device_name_hint"
                    android:maxLength="32" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:id="@+id/editDevSn"
                    android:hint="@string/device_sn"
                    android:maxLength="32" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/editDevPolling"
                    android:hint="@string/device_polling"
                    android:maxLength="32" />

                <TextView
                    android:textColor="#ff000000"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/device_model"
                    android:id="@+id/txtDevType"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="15dp" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinDevType" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ckboxEnlog"
                    android:layout_gravity="left"
                    android:text="@string/enable_usb_loggoing"
                    android:textSize="20sp"
                    android:singleLine="true"
                    android:visibility="invisible"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="15dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="10">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/btnDevConfirm"
                android:gravity="center"
                android:background="#2E5E86"
                android:textColor="#ffffffff"
                android:layout_gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="11" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="9">
    </LinearLayout>


</LinearLayout>
